--- a/index.ipynb
+++ b/index.ipynb
@@ -330,7 +330,7 @@
     {
      "data": {
       "text/plain": [
-       "<filter at 0x7ff160a96b38>"
+       "<filter at 0x7f7db43bc630>"
       ]
      },
      "execution_count": 10,
